; ModuleID = '/home/carl/AnghaBench/linux/drivers/leds/extr_leds-bcm6328.c_bcm6328_blink_delay.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/leds/extr_leds-bcm6328.c_bcm6328_blink_delay.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BCM6328_LED_INTERVAL_MS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64)* @bcm6328_blink_delay to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @bcm6328_blink_delay(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %4 = load i64, i64* %2, align 8
  %5 = load i32, i32* @BCM6328_LED_INTERVAL_MS, align 4
  %6 = sdiv i32 %5, 2
  %7 = sext i32 %6 to i64
  %8 = add i64 %4, %7
  store i64 %8, i64* %3, align 8
  %9 = load i64, i64* %3, align 8
  %10 = load i32, i32* @BCM6328_LED_INTERVAL_MS, align 4
  %11 = sext i32 %10 to i64
  %12 = udiv i64 %9, %11
  store i64 %12, i64* %3, align 8
  %13 = load i64, i64* %3, align 8
  %14 = icmp eq i64 %13, 0
  br i1 %14, label %15, label %16

15:                                               ; preds = %1
  store i64 1, i64* %3, align 8
  br label %16

16:                                               ; preds = %15, %1
  %17 = load i64, i64* %3, align 8
  ret i64 %17
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
